# multi-drone-task-with-openvins

./: .gitignore  .~lock.Procedure.odt#  PROJECT_INTRODUCTION.md  Procedure.odt  log.txt  swarm_follow.py  uav_camera_det.py  yml_double.yml  yml_org.yml
ov_ws/src/open_vins/config/my_sim/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ov_ws/src/px4_imu_bridge/: CMakeLists.txt  package.xml
ov_ws/src/px4_imu_bridge/src/: px4_imu_bridge.cpp  px4_imu_bridge_node.cpp
worlds/: default.sdf
